--- a/ccs/style.css
+++ b/ccs/style.css
@@ -256,8 +256,16 @@ body {
   cursor: pointer;
 }
 
-.portfolio-image-item {
+.portfolio-image-link {
   text-decoration: none;
+  display: block;
+}
+
+.portfolio-image-link :hover,
+.portfolio-image-link :focus {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .imagedescription {
@@ -414,11 +422,6 @@ body {
   color: var(--primary-cloud-color);
 }
 
-.footer-text {
-  color: var(--primary-cloud-color);
-  margin-top: 18px;
-}
-
 /* ICONS */
 .benefits-icon-container {
   display: flex;
@@ -430,7 +433,7 @@ body {
   margin-bottom: 8px;
 }
 
-.our-team-social-item {
+.our-team-social-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -444,14 +447,15 @@ body {
 .our-team-social-icon {
   fill: var(--primary-cloud-color);
 }
-.out-team-social-list {
+.our-team-social-list {
   display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
 }
 
-.our-team-social-item:hover,
-.our-team-social-item :focus {
+.our-team-social-link:hover,
+.our-team-social-link:focus {
   background-color: var(--click-color);
 }
 
@@ -460,14 +464,9 @@ body {
   gap: 30px;
 }
 
-.customers-client-item {
-  width: calc((100%-150px) / 6);
-  height: 90px;
-}
-
 .customers-client-link {
-  width: 100%;
-  height: 100%;
+  width: 168px;
+  height: 90px;
   border: 1px solid var(--light-slate-color);
   color: var(--light-slate-color);
   border-radius: 5px;
@@ -491,7 +490,7 @@ body {
 .footer-container {
   display: flex;
 }
-.columna-container {
+.footercontainer {
   width: 40%;
 }
 
@@ -500,39 +499,7 @@ body {
 }
 
 .footer-social-icon {
-  margin-top: 16px;
-  gap: 10px;
-}
-
-.footer-social-icon {
   fill: var(--primary-cloud-color);
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding-bottom: 7px;
-}
-
-.footer-social-list {
-  display: flex;
-  justify-content: flex-start;
-  margin-top: -16px;
-  margin-left: -16px;
-}
-
-.footer-social-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 16px;
-  margin-left: 16px;
-  border-radius: 50%;
-  background-color: var(--primary-iris-color);
-  width: 40px;
-  height: 40px;
-}
-
-.footer-social-item:hover,
-.footer-social-item :focus {
-  background-color: var(--footer-click-color);
 }
 
 .footer-social-text {
@@ -541,4 +508,32 @@ body {
   font-weight: 500;
   line-height: 24px; /* 150% */
   letter-spacing: 0.32px;
+  color: var(--primary-white-color);
+  margin-bottom: 16px;
+}
+.footer-text-wrapper {
+  margin-left: 120px;
+}
+
+.footer-social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.footer-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-iris-color);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: 8px;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--footer-click-color);
 }
